--- a/resources/css/aech.css
+++ b/resources/css/aech.css
@@ -12,7 +12,7 @@
   /* Light text, low-importance elements, and so on */
   --color-light: #9393a8;
   /* Buttons and other interface elements you want to highlight */
-  --color-accent: #8049ff;
+  --color-accent: #2977f5;
   /* Body text */
   --color-dark: #282851;
   /* Interface text */
@@ -69,7 +69,7 @@
 
 ::placeholder {
   color: var(--color-light);
-  opacity: 1;
+  opacity: 0.5;
 }
 
 * {
@@ -145,7 +145,7 @@ h6 {
 }
 
 a {
-  color: #2977f5;
+  color: var(--color-accent);
   text-decoration: none;
 }
 
@@ -175,6 +175,30 @@ th {
   padding: 0;
 }
 
+.input-group {
+  margin: 20px 0;
+}
+
+.input-group .note {
+  font-size: 0.8rem;
+}
+
+.input-group label {
+  margin-bottom: 5px;
+  font-size: 0.7rem;
+  color: var(--color-light);
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.input-group .error {
+  color: red;
+  margin-top: 2px;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
 input[type="email"],
 input[type="password"],
 input[type="text"],
@@ -183,8 +207,8 @@ textarea {
   width: 100%;
 
   color: var(--color-black);
-  border: 1px solid var(--color-wash);
-  border-radius: 4px;
+  border: 2px solid var(--color-wash);
+  border-radius: 2px;
 }
 
 input[type="email"]:focus,
@@ -230,7 +254,7 @@ input[type="submit"] {
 /* Buttons */
 .button--primary,
 .button--secondary {
-  padding: var(--s) var(--xl);
+  padding: var(--s) var(--m);
 
   border-radius: 4px;
 }
@@ -242,4 +266,21 @@ input[type="submit"] {
 
 .button--secondary {
   border: 1px solid var(--color-wash);
+}
+
+/* Layout */
+.container-flex-center {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box {
+  padding: var(--xl);
+  width: 95%;
+  max-width: 400px;
+  border: 2px solid var(--color-wash);
+  border-radius: 2px;
 }
