--- a/resources/css/aech.css
+++ b/resources/css/aech.css
@@ -285,10 +285,24 @@ input[type="submit"] {
   justify-content: center;
 }
 
+.full-page {
+  min-height: 100%;
+  height: auto;
+}
+
 .box {
   padding: var(--xl);
   width: 95%;
   max-width: 400px;
   border: 2px solid var(--color-wash);
   border-radius: 2px;
+}
+
+@media screen and (max-width: 500px) {
+  .box.responsive {
+    padding: 30px 10px;
+    width: 100%;
+    height: auto;
+    border: none; 
+  }
 }
