--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #nprogress .bar {
   box-shadow: none;
   height: 5px !important;
@@ -5,4 +9,17 @@
 
 #nprogress .bar .peg {
   box-shadow: none;
+}
+
+body,
+html,
+#app {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.button {
+  @apply bg-sudo py-2 px-3 rounded;
 }
