--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap");
 
 #nprogress .bar {
   box-shadow: none;
@@ -20,6 +21,17 @@ html,
   padding: 0;
 }
 
-.button {
-  @apply bg-sudo py-2 px-3 rounded;
+@layer components {
+  .button {
+    @apply cursor-pointer bg-sudo block rounded-lg p-4 text-center
+           uppercase leading-none font-bold border-2 border-sudo
+           hover:border-white text-sm text-white transition
+           focus:outline-none focus:border-dark focus:shadow-none;
+  }
+  .button-outline {
+    @apply cursor-pointer block rounded-lg p-4 text-center
+           uppercase leading-none font-bold border-2 border-sudo
+           hover:bg-sudo text-sm text-white transition
+           focus:outline-none focus:border-dark focus:shadow-none;
+  }
 }
