refactor: add `correct` to UserAttempt model

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,8 +48,14 @@ html,
   padding: 0;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .button {
-    @apply cursor-pointer bg-sudo block text-center p-3 px-4
+  @apply cursor-pointer bg-sudo block text-center p-3 px-4
     text-sm uppercase font-bold rounded-lg focus:outline-none
     focus:ring-4 focus:ring-sudo-dark;
 }
