--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,6 +30,26 @@
   font-style: normal;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff30;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: transparent;
+}
+
 #nprogress .bar {
   box-shadow: none;
   height: 5px !important;
